<resources>
    <!-- App -->
    <string name="app_name">Hydrate Me</string>
    <string name="app_version">Version %1$s</string>
    <string name="app_header">Stay Hydrated, Stay Healthy</string>
    <string name="app_intro">Keep track of your daily water intake and stay motivated to drink more water every day.</string>
    <string name="owner">from Imasha Senarath</string>

    <!-- Titles -->
    <string name="profile_title">Profile</string>
    <string name="history_title">History</string>
    <string name="notifications_title">Notifications</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Logout</string>
    <string name="delete_title">Delete</string>
    <string name="error_title">Error</string>
    <string name="update_title">Update %1$s</string>
    <string name="set_goal_title">Set Goal</string>

    <!-- Messages -->
    <string name="deleted_msg">Deleted</string>
    <string name="field_cant_empty_msg">Fields cannot be empty.</string>
    <string name="drink_added_msg">Drink Added.</string>
    <string name="logout_confirm_msg">Are you sure you want to log out?</string>
    <string name="delete_confirm_msg">Are you sure you want to delete?</string>
    <string name="goal_achieved_msg">You achieved the water goal!</string>

    <!-- Buttons -->
    <string name="get_started_btn">Get Started</string>
    <string name="login_btn">Login</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="cancel_btn">Cancel</string>
    <string name="update_btn">Update</string>
    <string name="ok_btn">OK</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>

    <!-- Placeholders -->
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_your_goal">Enter your goal</string>
    <string name="enter_value">Enter your %1$s</string>

    <!-- labels -->
    <string name="login_label">Login</string>
    <string name="welcome">Welcome Back</string>
    <string name="do_not_have_account">Don\'t have an Account?</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="get_started">Let\'s Get Started.</string>
    <string name="have_account">Already have an account?</string>

    <string name="size_ml">%1$dml</string>
    <string name="drink_target">%1$d/%2$dml</string>
    <string name="drink_target_label">Drink Target</string>
    <string name="quick_drink_label">Quick Drink</string>
    <string name="no_records_yet">No records yet</string>
    <string name="today_records_label">Today\'s Records</string>
    <string name="date_time">%1$s • %2$s</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="advice">\"%1$s\"</string>

    <string name="preferences_label">Preferences</string>
    <string name="theme_label">Theme</string>
    <string name="select_theme_dec">Select your preferred app theme.</string>
    <string name="language__label">Language</string>
    <string name="select_lang_dec">Select your preferred language.</string>
    <string name="notification_label">Notification</string>
    <string name="push_notification_label">Push Notification</string>
    <string name="notification_switch_dec">Turn off notifications to stop receiving reminders.</string>
    <string name="about_label">About</string>

    <string name="personal_label">Personal</string>
    <string name="name_label">Name</string>
    <string name="gender_label">Gender</string>
    <string name="weight_label">Weight</string>
    <string name="weight">%1$.1fKG</string>
    <string name="goal_label">Goal</string>
    <string name="water_goal">Water Goal</string>
    <string name="set_goal_des">Set goal to 0 to calculate intake based on your profile.</string>
    <string name="sleep_label">Sleep</string>
    <string name="wake_up_time_label">Wake Up Time</string>
    <string name="wake_up_time_des">Set a wake-up time to pause notifications until this time.</string>
    <string name="bed_time_label">Bed Time</string>
    <string name="bedtime_des">Set a bedtime to pause notifications after this time.</string>
</resources>