<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/set_goal_title"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/spacing_medium"/>

    <EditText
        android:id="@+id/editTextValue"
        style="@style/AppPrimaryEdiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_your_goal"
        android:layout_marginBottom="@dimen/spacing_large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_marginEnd="@dimen/spacing_small"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_btn" />
    </LinearLayout>
</LinearLayout>
